# mdw

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGES_FROM_PR_REVIEW.md  CONTRIBUTING.md  README.md  basedpyright.json  dagster.yaml  docker-compose.yml  package-lock.json  pyproject.toml  pyrightconfig.json  workspace.yaml
.cursor/rules/: commiting-code.mdc  installing_packages.mdc
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
config/workflows/extractors/: nightscout.yaml
config/workflows/pipelines/: nightscout_glucose_pipeline.yaml
dbt_common/: README.md
dbt_common/docs/: data_quality.md
dbt_common/macros/: data_quality_macros.sql
dbt_common/sql/: create_monitoring_schema.sql
dbt_common/tests/: data_quality_tests.sql
docker/: Dockerfile  Dockerfile.api  Dockerfile.duckdb  Dockerfile.ingestion  docker-compose.yml  duckdb_server.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  ci_cd.md  extractors.md  mkdocs.yml
docs/components/: README.md  ingestion.md
docs/docs/: getting-started.md  user-guide.md
docs/docs/api/: index.md
docs/site/: 404.html  index.html  objects.inv
docs/site/api/: index.html
docs/site/getting-started/: index.html
docs/site/search/: search_index.json
docs/site/user-guide/: index.html
scripts/: log_dbt_test_results.py
src/data_warehouse/: __init__.py  main.py
src/data_warehouse/cli/: README.md  __init__.py  dagster.py  deploy.py  docs.py  ingestion.py  main.py  monitor.py  storage.py  transforms.py
src/data_warehouse/config/: settings.py
src/data_warehouse/core/: __init__.py  base.py  db.py  exceptions.py
src/data_warehouse/core/storage/: __init__.py  duckdb.py  minio.py  postgres.py
src/data_warehouse/extractors/: nightscout_extractor.py  sling_extractor.py
src/data_warehouse/ingestion/: __init__.py  dlt_pipeline.py  example_db_source.py  example_file_source.py  source_base.py
src/data_warehouse/orchestration/dagster/: README.md  __init__.py  repository.py
src/data_warehouse/orchestration/dagster/assets/: __init__.py  marts.py  raw.py  raw_data.py  staging.py  transformed_data.py  warehouse.py
src/data_warehouse/orchestration/dagster/ops/: __init__.py  data_quality.py  notifications.py  utilities.py
src/data_warehouse/orchestration/dagster/resources/: __init__.py  database.py  io_managers.py
src/data_warehouse/orchestration/dagster/schedules/: __init__.py
src/data_warehouse/orchestration/dagster/sensors/: __init__.py
src/data_warehouse/services/: duckdb_server.py
src/data_warehouse/sources/: __init__.py  api_client.py  file_client.py
src/data_warehouse/transformers/: basic_transformers.py  identity_transformer.py
src/data_warehouse/utils/: error_handler.py  logger.py  transformations.py
src/data_warehouse/workflow/: __init__.py  base.py  dagster_integration.py  discovery.py  etl.py
src/data_warehouse/workflow/_templates/: workflow_template.py
src/data_warehouse/workflow/examples/github/: __init__.py  extraction.py  load.py  transform.py  workflow.py
src/data_warehouse/workflow/examples/nightscout/: __init__.py  extraction.py  load.py  transform.py  workflow.py
src/data_warehouse/workflows/: __init__.py  base.py  cli.py  dagster_integration.py  discovery.py  docs_generator.py  registry.py  templates.py  validator.py  watcher.py  workflow_manager.py
src/data_warehouse/workflows/core/: base.py  discovery.py  exceptions.py  registry.py  workflow_manager.py
src/data_warehouse/workflows/extractors/: sling_extractor.py
src/data_warehouse/workflows/integrations/: dagster_integration.py
src/data_warehouse/workflows/nightscout/: extraction.py
src/data_warehouse/workflows/tests/: test_dagster_integration.py  test_pipeline.py  test_templates.py  test_validator.py
src/data_warehouse/workflows/tools/: cli.py  docs_generator.py  templates.py  validator.py
tests/: conftest.py
tests/unit/utils/: test_project_root.py
tests/workflows/: test_base.py  test_dagster_integration.py  test_pipeline.py  test_templates.py  test_validator.py  test_watcher.py
tests/workflows/nightscout/: test_extraction.py
workflows/: __init__.py  base.py  cli.py  dagster_integration.py  discovery.py  docs_generator.py  registry.py  templates.py  validator.py  workflow_manager.py
workflows/_templates/: base_workflow.py
workflows/extractors/: sling_extractor.py
workflows/nightscout/: models.py
workflows/tests/: test_base.py  test_dagster_integration.py  test_pipeline.py  test_templates.py  test_validator.py  test_watcher.py
